[tool.poetry]
name = "p1parser"
version = "0.1.0"
description = ""
authors = ["Jelle Helsen <jelle.helsen@hcode.be>"]
readme = "README.md"
packages = [{include = "p1parser"}]

[tool.poetry.scripts]
p1parser = 'p1parser.cli:main'

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.19.0"
dsmr-parser = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
