[tool.poetry]
name = "p12prometheus"
version = "0.1.0"
description = ""
authors = ["Jelle Helsen <jelle.helsen@hcode.be>"]
readme = "README.md"
packages = [{include = "p12prometheus"}]

[tool.poetry.scripts]
p12prometheus = 'p12prometheus.cli:main'

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.19.0"
dsmr-parser = "^1.3.1"
setuptools = "^69.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
